--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="thymeleaf">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Moonykun</title>
@@ -95,9 +95,18 @@
                 layer.msg('验证码不能为空');
                 return false;
             }
-            layer.msg('登录成功', function () {
-                window.location = '../index.html';
-            });
+            // 异步登录请求
+            const url = "/user/login";
+            $.post(url,data,function (response) {
+                console.log(response);
+                if (response.code === 0) {
+                    layer.msg('登录成功',{anim: 6,icon: 6},function (){
+                        window.location = '/index';
+                    });
+                }else {
+                    layer.msg('登录失败',{icon:5});
+                }
+            })
             return false;
         });
     });
