分页查询页面

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,18 @@
     <!--[if lt IE 9]>
     <![endif]-->
     <style id="layuimini-bg-color">
+        .layui-nav-tree .layui-nav-item>a .layui-nav-more{
+            top: 21px;
+        }
+        .layui-layout-admin .layuimini-logo img{
+            height: 100%;
+        }
+        .layuimini-tab .layui-tab-content{
+            padding: 15px!important;
+        }
+        .layui-layout-admin .layui-body{
+            background-color: rgb(242, 242, 242);
+        }
     </style>
 </head>
 <body class="layui-layout-body layuimini-all">
