--- a/src/main/resources/templates/emp/empList.html
+++ b/src/main/resources/templates/emp/empList.html
@@ -107,7 +107,7 @@
                 ,{field:'sal', width:80, title: '工资', sort: true}
                 ,{field:'deptId', width:120, title: '部门编号',align: 'center'}
                 ,{field:'address', title: '地址', minWidth: 150}
-                ,{title: '操作', width: 150}
+                ,{title: '操作', width: 80,align: 'center'}
             ] ]
         });
 
