--- a/src/main/resources/templates/emp/empEdit.html
+++ b/src/main/resources/templates/emp/empEdit.html
@@ -16,43 +16,43 @@
 </head>
 
 <body>
-<form class="layui-form layui-form-pane" action="">
+<form class="layui-form layui-form-pane" action="" th:object="${emp}">
+    <input type="hidden" th:field="*{empId}">
     <div class="layui-form-item">
         <label class="layui-form-label">员工姓名</label>
         <div class="layui-input-block">
-            <input type="text" name="name" autocomplete="off" placeholder="请输入姓名" lay-verify="required" class="layui-input">
+            <input type="text" th:field="*{name}" required="required" autocomplete="off" placeholder="请输入姓名" lay-verify="required" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item" pane>
         <label class="layui-form-label">单选框</label>
         <div class="layui-input-block">
-            <input type="radio" name="sex" value="F" title="男" checked>
-            <input type="radio" name="sex" value="M" title="女">
-            <input type="radio" name="sex" value="禁" title="禁用" disabled>
+            <input type="radio"  th:field="*{sex}" value="M" title="男">
+            <input type="radio"  th:field="*{sex}" value="F" title="女">
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">年龄</label>
         <div class="layui-input-block">
-            <input type="text" name="age" autocomplete="off" placeholder="请输入年龄" lay-verify="required|number" class="layui-input">
+            <input type="text"  th:field="*{age}" autocomplete="off" placeholder="请输入年龄" lay-verify="required|number" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">生日</label>
         <div class="layui-input-block">
-            <input type="text" name="birthday" autocomplete="off" placeholder="请输入生日" lay-verify="required" class="layui-input" id="emp-birthday">
+            <input type="text"  th:field="*{birthday}" autocomplete="off" placeholder="请输入生日" lay-verify="required" class="layui-input" id="emp-birthday">
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">工资</label>
         <div class="layui-input-block">
-            <input type="text" name="sal" autocomplete="off" placeholder="请输入工资" lay-verify="required|number" class="layui-input">
+            <input type="text"  th:field="*{sal}" autocomplete="off" placeholder="请输入工资" lay-verify="required|number" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">部门</label>
         <div class="layui-input-inline">
-            <select name="deptId" lay-filter="aihao" lay-verify="required">
+            <select  th:field="*{deptId}" lay-filter="aihao" lay-verify="required">
                 <option value=""></option>
                 <option th:each="dept:${deptList}" th:value="${dept.deptId}">
                     <span th:text="${dept.deptName}"></span>
@@ -63,7 +63,7 @@
     <div class="layui-form-item layui-form-text">
         <label class="layui-form-label">地址</label>
         <div class="layui-input-block">
-            <textarea name="address" placeholder="请输入地址" class="layui-textarea"></textarea>
+            <textarea  th:field="*{address}" placeholder="请输入地址" class="layui-textarea"></textarea>
         </div>
     </div>
     <div class="layui-form-item">
@@ -92,11 +92,11 @@
             var field = data.field; // 获取表单全部字段值
             $("#confirm-btn").attr("disabled","disabled").addClass("layui-btn-disabled");
             console.log(field)
-            var url = ctxPath + "emp";
+            var url = ctxPath + "emp/update";
+            field._method = "PUT";
             $.post(url,field,function (response) {
                 if (response.code === 0) {
                     //成功提示
-
                     layer.msg(response.message, {
                         icon: 1,
                         time: 2000 //2秒关闭（如果不配置，默认是3秒）
