--- a/src/main/resources/templates/emp/empList.html
+++ b/src/main/resources/templates/emp/empList.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}" media="all">
     <link rel="stylesheet" th:href="@{/css/layuimini.css?v=2.0.4.2}" media="all">
     <link rel="stylesheet" th:href="@{/css/themes/default.css}" media="all">
-    <link rel="stylesheet" th:href="@{lib/font-awesome-4.7.0/css/font-awesome.min.css}" media="all">
+    <link rel="stylesheet" th:href="@{/lib/font-awesome-4.7.0/css/font-awesome.min.css}" media="all">
 
     <style>
         .div-content {
@@ -30,7 +30,7 @@
     <fieldset class="table-search-fieldset">
         <legend>搜索条件</legend>
         <div style="margin: 10px 10px 10px 10px">
-            <form class="layui-form layui-form-pane" action="">
+            <form class="layui-form layui-form-pane" action="" id="emp-form">
                 <div class="layui-form-item">
                     <div class="layui-inline">
                         <label class="layui-form-label">用户姓名</label>
@@ -55,8 +55,14 @@
                     </div>
 
                     <div class="layui-inline">
-                        <button  type="submit" class="layui-btn layui-btn-primary" lay-submit=""
+                        <button  id="emp-search" type="submit" class="layui-btn layui-btn-primary" lay-submit=""
                                 lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索
+                        </button>
+                    </div>
+
+                    <div class="layui-inline">
+                        <button  id="emp-reset" type="reset" class="layui-btn layui-btn-primary"
+                                 lay-filter="data-reset-btn"><i class="layui-icon layui-icon-fonts-clear"></i> 重置
                         </button>
                     </div>
 
@@ -88,23 +94,33 @@
 <script type="text/html" id="toolbarDemo">
     <div class="layui-btn-container">
         <button class="layui-btn layui-btn-sm" lay-event="add">添加</button>
-        <button class="layui-btn layui-btn-sm" lay-event="update">编辑</button>
         <button class="layui-btn layui-btn-sm layui-btn-danger" lay-event="delete">删除</button>
     </div>
 </script>
 
+<script type="text/html" id="delete-update">
+    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+</script>
+
+<script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}" charset="utf-8"></script>
 <script th:src="@{/layui/layui.js}" charset="utf-8"></script>
 <script th:inline="javascript">
+    //刷新页面
+    function refreshTable() {
+        $("#emp-reset").click();
+        $("#emp-search").click();
+    }
 
     layui.use('table',function () {
         var laydate = layui.laydate;
 
         var table = layui.table;
 
+        var ctxPath = [[@{/}]];
+
         var form = layui.form;
 
-
-        var ctxPath = [[@{/}]];
         // 批量日期渲染
         laydate.render({
             elem: '#emp-start-date'
@@ -129,17 +145,19 @@
             }
             ,pagebar: '#ID-table-demo-page-pagebar' // 分页栏模板
             ,cols: [ [
-                {field:'empId', width:140, title: '员工编号', sort: true,align: 'center'}
+                {type: "checkbox",width: 80},
+                {field:'empId', width:140, title: '员工编号',align: 'center'}
                 ,{field:'name', width:180, title: '员工姓名',align: 'center'}
                 ,{field:'sex', width:80, title: '性别', sort: true,align: 'center',templet: '#convertSex'}
                 ,{field:'age', width:80, title: '年龄'}
                 ,{field:'birthday', width:180, title: '生日'}
-                ,{field:'sal', width:80, title: '工资', sort: true}
+                ,{field:'sal', width:150, title: '工资', sort: true}
                 ,{field:'deptId', width:120, title: '部门编号',align: 'center',templet: '#convertDept'}
                 ,{field:'address', title: '地址', minWidth: 150}
-                ,{title: '操作', width: 80,align: 'center'}
+                ,{title: '操作', width: 150,align: 'center',toolbar: '#delete-update'}
             ] ]
         });
+
         // 搜索功能实现
         form.on('submit(data-search-btn)', function(data){
             var field = data.field; // 获取表单全部字段值
@@ -156,12 +174,9 @@
             });
             return false; // 阻止默认 form 跳转
         });
+
         // 增删查改
         table.on('toolbar(table-emp-filter)', function(obj){
-            var options = obj.config; // 获取当前表格属性配置项
-            var checkStatus = table.checkStatus(options.id); // 获取选中行相关数据
-            console.log(obj); // 查看对象所有成员
-
             // 根据不同的事件名进行相应的操作
             switch(obj.event){ // 对应模板元素中的 lay-event 属性值
                 case 'add':
@@ -171,18 +186,81 @@
                         shadeClose: true,
                         shade: 0.4,
                         area: ['50%', '80%'],
-                        content: '/layer/test/1.html' // iframe 的 url
+                        content: ctxPath+'emp/add' // iframe 的 url
                     });
                     break;
                 case 'delete':
-                    layer.alert("删除");
+                    var checkStatus = table.checkStatus('ID-table-demo-page'); //idTest 即为基础参数 id 对应的值
+                    // 判断是否选中为空
+                    if (checkStatus.data.length == 0) {
+                        layer.alert("没有选中任何数据",{icon:2,anim:6,title: "提示"})
+                        break;
+                    }
+                    console.log(checkStatus.data) //获取选中行的数据
+                    // 转换数据 为_,_
+                    var array = new Array();
+                    $(checkStatus.data).each(function () {
+                        array.push(this.empId);
+                    })
+                    console.log(array.join(','));
+                    //异步请求删除数据
+                    var url = ctxPath +"emp/" + array.join(',');
+                    // 说明请求方式
+                    var param = {
+                        _method: "DELETE"
+                    }
+                    $.post(url,param,function (response){
+                        if(response.code === 0) {
+                            layer.msg(response.message,{icon: 1 ,title: "提示"})
+                            refreshTable();
+                        }
+                        //刷新表格
+                        else {
+                            layer.msg('出错了', {icon: 6});
+                        }
+                     })
                     break;
                 case 'update':
                     layer.alert("更新");
                     break;
             };
         });
+        //工具条事件
+        table.on('tool(table-emp-filter)', function(obj){ //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
+            var data = obj.data; //获得当前行数据
+            var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
 
+            if(layEvent === 'del'){ //查看
+                layer.confirm('是否删除'+data.name, function(index){
+                    var url = ctxPath +"emp/" + data.empId;
+                    // 说明请求方式
+                    var param = {
+                        _method: "DELETE"
+                    }
+                    $.post(url,param,function (response){
+                        if(response.code === 0) {
+                            layer.msg(response.message,{icon: 1 ,title: "提示"})
+                            refreshTable();
+                        }
+                        //刷新表格
+                        else {
+                            layer.msg('出错了', {icon: 6});
+                        }
+                    })
+                });
+            } else if(layEvent === 'edit'){ //编辑
+                //do something
+                //同步更新缓存对应的值
+                layer.open({
+                    type: 2,
+                    title: '修改员工',
+                    shadeClose: true,
+                    shade: 0.4,
+                    area: ['50%', '80%'],
+                    content: ctxPath+'emp/'+data.empId // iframe 的 url
+                });
+            }
+        });
     });
 </script>
 </body>
