--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,6 +32,10 @@
         .layui-layout-admin .layui-body{
             background-color: rgb(242, 242, 242);
         }
+        .layui-layout-admin .layuimini-logo img {
+            height: 70%;
+            border-radius: 20px;
+        }
     </style>
 </head>
 <body class="layui-layout-body layuimini-all">
