--- a/src/main/resources/templates/emp/empList.html
+++ b/src/main/resources/templates/emp/empList.html
@@ -175,7 +175,7 @@
             return false; // 阻止默认 form 跳转
         });
 
-        // 增删查改
+        //多选删除以及添加
         table.on('toolbar(table-emp-filter)', function(obj){
             // 根据不同的事件名进行相应的操作
             switch(obj.event){ // 对应模板元素中的 lay-event 属性值
@@ -225,7 +225,7 @@
                     break;
             };
         });
-        //工具条事件
+        //单个删除修改
         table.on('tool(table-emp-filter)', function(obj){ //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
             var data = obj.data; //获得当前行数据
             var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
