--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}" media="all">
     <link rel="stylesheet" th:href="@{/css/layuimini.css?v=2.0.4.2}" media="all">
     <link rel="stylesheet" th:href="@{/css/themes/default.css}" media="all">
-    <link rel="stylesheet" th:href="@{lib/font-awesome-4.7.0/css/font-awesome.min.css}" media="all">
+    <link rel="stylesheet" th:href="@{/lib/font-awesome-4.7.0/css/font-awesome.min.css}" media="all">
 
     <style>
         .user-div {
@@ -44,18 +44,42 @@
                                 <input type="text" name="classify" autocomplete="off" class="layui-input">
                             </div>
                         </div>
+
                         <div class="layui-inline">
-                            <button type="submit" class="layui-btn layui-btn-primary" lay-submit="" lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button>
+                            <button id="user-search" type="submit" class="layui-btn layui-btn-primary" lay-submit="" lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button>
+                        </div>
+                        <div class="layui-inline">
+                            <button  id="user-reset" type="reset" class="layui-btn layui-btn-primary"
+                                     lay-filter="user-reset-btn"><i class="layui-icon layui-icon-fonts-clear"></i> 重置
+                            </button>
                         </div>
                     </div>
                 </form>
             </div>
         </fieldset>
-        <table class="layui-hide" id="ID-table-demo-page"></table>
+        <table class="layui-hide" id="ID-table-demo-page" lay-filter="table-user-filter"></table>
     </div>
 </body>
+
+<script type="text/html" id="toolbarDemo">
+    <div class="layui-btn-container">
+        <button class="layui-btn layui-btn-sm layui-btn-danger" lay-event="delete">删除</button>
+    </div>
+</script>
+
+<script type="text/html" id="delete-update">
+    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+</script>
+
 <script th:src="@{/layui/layui.js}" charset="utf-8"></script>
+<script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}" charset="utf-8"></script>
 <script th:inline="javascript">
+
+    function refreshTable() {
+        $("#user-reset").click();
+        $("#user-search").click();
+    }
 
     layui.use('table', function(){
         var ctxPath = [[@{/}]];
@@ -68,6 +92,8 @@
         table.render({
             elem: '#ID-table-demo-page'
             ,url: ctxPath+'user/list' // 此处为静态模拟数据，实际使用时需换成真实接口
+            ,toolbar: '#toolbarDemo'
+            ,width: 550
             ,limits: [1,3,5,7,9]
             ,page: { // 支持传入 laypage 组件的所有参数（某些参数除外，如：jump/elem） - 详见文档
                 layout: ['limit', 'count', 'prev', 'page', 'next', 'skip'] //自定义分页布局
@@ -78,30 +104,102 @@
             }
             ,pagebar: '#ID-table-demo-page-pagebar' // 分页栏模板
             ,cols: [ [
-                {field:'id', width:80, title: 'ID', sort: true}
+                {type: "checkbox",width: 80}
+                ,{field:'id', width:80, title: 'ID', sort: true}
                 ,{field:'username', width:180, title: '用户名'}
                 ,{field:'chName', width:80, title: '中文名'}
-                ,{title: '操作', minWidth: 80}
+                ,{title: '操作', minWidth: 150, toolbar: '#delete-update',align: 'center'}
             ] ]
         });
-
+        // 渲染分页列表
         form.on('submit(data-search-btn)', function(data){
             var field = data.field; // 获取表单全部字段值
-            var elem = data.elem; // 获取当前触发事件的元素 DOM 对象，一般为 button 标签
-            var elemForm = data.form; // 获取当前表单域的 form 元素对象，若容器为 form 标签才会返回。
             console.log(field);
             table.reload('ID-table-demo-page', {
                 where: { // 传递数据异步请求时携带的字段
                     name: data.field.username,
                     chName: data.field.classify
-                    //…
                 },
             });
-            // 此处可执行 Ajax 等操作
-            // …
             return false; // 阻止默认 form 跳转
         });
+        table.on('toolbar(table-user-filter)', function(obj){
+            var checkStatus = table.checkStatus('ID-table-demo-page'); //idTest 即为基础参数 id 对应的值
+            // 判断是否选中为空
+            if (checkStatus.data.length == 0) {
+                layer.alert("没有选中任何数据",{icon:2,anim:6,title: "提示"})
+                return false;
+            }
+            console.log(checkStatus.data) //获取选中行的数据
 
+            if (obj.event === 'delete') {
+                // 转换数据 为_,_
+                var array = new Array();
+                $(checkStatus.data).each(function () {
+                    array.push(this.id);
+                })
+                console.log(array.join(','));
+
+                //异步请求删除数据
+                var url = ctxPath +"user/delete/" + array.join(',');
+                // 说明请求方式
+                var param = {
+                    _method: "DELETE"
+                }
+                $.post(url,param,function (response){
+                    if(response.code === 0) {
+                        layer.msg(response.message,{icon: 1 ,title: "提示"})
+                        // 刷新表单
+                        refreshTable();
+                    }
+                    //刷新表格
+                    else {
+                        layer.msg('出错了', {icon: 6});
+                    }
+                })
+            }
+            return false;
+        });
+
+        table.on('tool(table-user-filter)', function(obj){
+            var data = obj.data; //获得当前行数据
+            var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
+            console.log(data,layEvent)
+
+            // 分开操作
+            if(layEvent === 'del'){ // 删除
+                //do something
+                layer.confirm('真的删除用户'+data.username, function(index){
+                    // 数据处理
+                    // 向服务端发送删除指令
+                    var url = ctxPath +"user/delete/" + data.id;
+                    // 说明请求方式
+                    var param = {
+                        _method: "DELETE"
+                    }
+                    $.post(url,param,function (response){
+                        if(response.code === 0) {
+                            layer.msg(response.message,{icon: 1 ,title: "提示"})
+                            // 刷新表单
+                            refreshTable();
+                        }
+                        //刷新表格
+                        else {
+                            layer.msg('出错了', {icon: 6});
+                        }
+                    })
+                });
+            } else if(layEvent === 'edit') { //修改
+                layer.open({
+                    type: 2,
+                    title: '修改员工',
+                    shadeClose: true,
+                    shade: 0.4,
+                    area: ['50%', '80%'],
+                    content: ctxPath+'user/'+data.id // iframe 的 url
+                });
+            }
+        });
     });
 </script>
 </html>
