--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,10 +77,10 @@
                     <a href="javascript:;"><span th:text = "${session.userInfo.chName}"></span></a>
                     <dl class="layui-nav-child">
                         <dd>
-                            <a href="javascript:;" layuimini-content-href="page/user-setting.html" data-title="基本资料" data-icon="fa fa-gears">基本资料<span class="layui-badge-dot"></span></a>
+                            <a href="javascript:;" layuimini-content-href="page/user-setting.html" data-title="基本资料" data-icon="fa fa-gears" class="base-info">基本资料<span class="layui-badge-dot"></span></a>
                         </dd>
                         <dd>
-                            <a href="javascript:;" layuimini-content-href="page/user-password.html" data-title="修改密码" data-icon="fa fa-gears">修改密码</a>
+                            <a href="javascript:;" layuimini-content-href="page/user-password.html" data-title="修改密码" data-icon="fa fa-gears" class="change-pass">修改密码</a>
                         </dd>
                         <dd>
                             <hr>
@@ -176,8 +176,18 @@
 
         $('.login-out').on("click", function () {
             layer.msg('退出登录成功', function () {
-                window.location = 'page/login-3.html';
+                window.location = ctxPath + 'login';
             });
+        });
+
+        $('.base-info').on("click", function () {
+            // 基本资料定位
+            window.location = ctxPath + 'login';
+        });
+
+        $('.change-pass').on("click", function () {
+            // 基本资料定位
+            window.location = ctxPath + 'login';
         });
     });
 </script>
